[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Textures/button.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/button-activated.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font/ConnectionIi-2wj8.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Scripts/Utility/Pattern.gd" type="Script" id=5]
[ext_resource path="res://Assets/Textures/exit.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="Pattern" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 109.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="MarginContainer"]
margin_right = 109.0
margin_bottom = 35.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pattern" type="HBoxContainer" parent="MarginContainer"]
margin_right = 109.0
margin_bottom = 35.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconButton" type="TextureButton" parent="MarginContainer/Pattern"]
margin_right = 35.0
margin_bottom = 35.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="RecipeIcon" type="TextureRect" parent="MarginContainer/Pattern/IconButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -17.5
margin_right = 17.5
margin_bottom = 17.5
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeText" type="Label" parent="MarginContainer/Pattern"]
margin_left = 39.0
margin_top = 2.0
margin_right = 109.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Test Debug Ignore"
valign = 1
autowrap = true
max_lines_visible = 2
[connection signal="button_down" from="MarginContainer/Pattern/IconButton" to="." method="_on_IconButton_button_down"]
